--- a/templates/cucina.html
+++ b/templates/cucina.html
@@ -1,5 +1,10 @@
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/> 
 <html>
+	<head>
+		<meta charset="UTF-8"/>
+		<style>
+			body { font-family: "Segoe UI", sans-serif; }
+		</style>
+	</head>
 <body>
 
 <img src="C:\sagra\stampe\logo_chiesa.png" />&nbsp;<b>Parrocchia di Stra - Festa della comunità {{ordine.data.strftime("%Y")}}</b><br>
@@ -14,23 +19,23 @@
 		<td>
 			{{ordine.data.strftime("%a %d %B")}} - {{ordine.ora.strftime("%H:%M:%S")}}
 		</td>
-		{{if ordine.coperti}}
+		{% if ordine.coperti %}
 			<td width="15%" rowspan="2" align="center" valign="top">
 				<font size='2'>Tavolo</font><br /><font size='5'>{{ordine.numeroTavolo}}</font>
 			</td>
-		{{endif}}
+		{% endif %}
 	</tr>
 	<tr>
 		<td>
-			{{if ordine.per_esportazione()}}
+			{% if ordine.esportazione %}
 				ASPORTO
-			{{else}}
-				{{if ordine.coperti}}
+			{% else %}
+				{% if ordine.coperti %}
 					COPERTI: {{ordine.coperti}}
-				{{else}}
+				{% else %}
 					AGGIUNTA
-				{{endif}}
-			{{endif}}
+				{% endif %}
+			{% endif %}
 		</td>
 		<td>
 			Cliente: {{ordine.cliente}}
@@ -41,50 +46,49 @@
 			(ID: {{ordine.id}})
 		</td>
 		<td colspan="2">
-			{{if not ordine.per_esportazione()}}
+			{% if not ordine.esportazione %}
 				Cameriere:
-			{{endif}}
+			{% endif %}
 		</td>
 	</tr>
 </table>
 
 <table width='100%' border='0' cellpadding='3'>
-	{{setattr(ordine, 'tipologia', 'null')}}
-	{{setattr(ordine, 'i', 1)}}
-	{{for riga_ordine in ordine.righe_copia_cucina()}}
-		{{if ordine.tipologia <> riga_ordine.desc_tipologia}}
+	{% set ns = namespace(tipologia = 'null', i = 1) %}
+	{% for riga_ordine in ordine.righe_copia_cucina %}
+		{% if ns.tipologia != riga_ordine.desc_tipologia %}
 			<tr bgcolor="#CCCCCC">
 				<td colspan='3'><b>{{riga_ordine.desc_tipologia}}</b></td>
 			</tr>
-			{{setattr(ordine, 'tipologia', riga_ordine.desc_tipologia)}}
-			{{setattr(ordine, 'i', getattr(ordine, 'i') + 1)}}
-		{{endif}}
+			{% set ns.tipologia = riga_ordine.desc_tipologia %}
+			{% set ns.i = ns.i + 1 %}
+		{% endif %}
 		<tr>
 			<td align='center'>{{riga_ordine.quantita}}</td>
-			<td>{{riga_ordine.descrizione}}{{if riga_ordine.note}}&nbsp;→&nbsp;<i>{{riga_ordine.note}}</i>{{endif}}</td>
-			<td align='right'>&euro;&nbsp;{{riga_ordine.calcola_prezzo_totale()}}</td>
+			<td>{{riga_ordine.descrizione}}{% if riga_ordine.note %}&nbsp;→&nbsp;<i>{{riga_ordine.note}}</i>{% endif %}</td>
+			<td align='right'>&euro;&nbsp;{{riga_ordine.prezzo_totale}}</td>
 		</tr>
-		{{setattr(ordine, 'i', getattr(ordine, 'i') + 1)}}
-	{{endfor}}
-	{{setattr(ordine, 'totbar', 0)}}
-	{{for riga_bar in ordine.righe_copia_bar()}}
-		{{setattr(ordine, 'totbar', getattr(ordine, 'totbar') + riga_bar.calcola_prezzo_totale())}}
-	{{endfor}}
+		{% set ns.i = ns.i + 1 %}
+	{% endfor %}
+	{% set totbar = 0 %}
+	{% for riga_bar in ordine.righe_copia_bar %}
+		{% set totbar = totbar + riga_bar.prezzo_totale %}
+	{% endfor %}
 	<tr bgcolor="#CCCCCC">
 		<td colspan='3'></td>
 	</tr>
-	{{if getattr(ordine, 'totbar') > 0}}
+	{% if totbar > 0 %}
 		<tr>
 			<td></td>
 			<td>TOTALE BAR</td>
-			<td align='right'>&euro;&nbsp;{{getattr(ordine, 'totbar')}}</td>
+			<td align='right'>&euro;&nbsp;{{totbar}}</td>
 		</tr>
-		{{setattr(ordine, 'i', getattr(ordine, 'i') + 1)}}
-	{{endif}}
+		{% set ns.i = ns.i + 1 %}
+	{% endif %}
 	<tr>
 		<td></td>
 		<td>TOTALE</td>
-		<td align='right'>&euro;&nbsp;{{ordine.totale()}}</td>
+		<td align='right'>&euro;&nbsp;{{ordine.totale}}</td>
 	</tr>
 </table>
 
@@ -92,15 +96,15 @@
 <table width="100%">
 	<tr>
 		<td valign='top'>
-			{{if ordine.note}}
+			{% if ordine.note %}
 				<b>Note:</b> <i>{{ordine.note}}</i><br>
-			{{endif}}
+			{% endif %}
 		</td>
 		<td width='30%'>
 			<table border='0' cellpadding='3'>
-				{{for x in range(getattr(ordine, 'i'), 20)}}
+				{% for x in range(ns.i, 20) %}
 					<tr><td>&nbsp;</td></tr>
-				{{endfor}}
+				{% endfor %}
 			</table>
 			<img src="C:\sagra\stampe\spirale.png" />
 		</td>
