--- a/templates/cliente.html
+++ b/templates/cliente.html
@@ -7,50 +7,83 @@
 	</head>
 <body>
 
-<img src="logo_chiesa.png" />&nbsp;<b>Parrocchia di Stra - Festa della comunità {{ordine.data.strftime("%Y")}}</b><br>
-<table width='100%' border='0' cellspacing='0'>
-	<tr>
-		<td width="15%" rowspan="2" align="center" avalign="top">
-			<font size='2'>Ordine</font><br /><font size='5'>{{ordine.progressivo}}</font>
-		</td>
-		<td width="25%">
-			{{ordine.cassa}}
-		</td>
-		<td>
-			{{ordine.data.strftime("%a %d %B")}} - {{ordine.ora.strftime("%H:%M:%S")}}
-		</td>
-	</tr>
-	<tr>
-		<td>
-			{% if ordine.esportazione %}
-				ASPORTO
-			{% else %}
-				{% if ordine.coperti %}
-					COPERTI: {{ordine.coperti}}
-				{% else %}
-					AGGIUNTA
-				{% endif %}
-			{% endif %}
-		</td>
-		<td>
-			Cliente: {{ordine.cliente}}
-		</td>
-	</tr>
-	<tr>
-		<td align="center">
-			(ID: {{ordine.id}})
-		</td>
-		<td colspan="2">
-			{% if not ordine.esportazione %}
-				Cameriere:
-			{% endif %}
-		</td>
-	</tr>
-</table>
+{% set ns = namespace(tipologia = 'null', i = 999, pagina = 0) %}
 
 <table width='100%' border='0' cellpadding='2'>
-	{% set ns = namespace(tipologia = 'null') %}
 	{% for riga_ordine in ordine.righe_copia_cliente %}
+		{% if ns.i > 21 %}
+			</table>
+			{% if ns.pagina > 0 %}
+				<table width='100%' border='0' cellpadding='2'>
+					{% if ns.tipologia != riga_ordine.desc_tipologia %}
+						<tr bgcolor="#CCCCCC">
+							<td colspan='2'></td>
+						</tr>
+						{% set ns.tipologia = riga_ordine.desc_tipologia %}
+					{% endif %}
+					<tr>
+						<td width="50%"></td>
+						<td bgcolor="#444444" align="center"><i><b><font color="white">Segue →</font></b></i></td>
+					</tr>
+					<tr><td>&nbsp;</td></tr>
+					<tr><td>&nbsp;</td></tr>
+					<tr><td>&nbsp;</td></tr>
+				</table>
+			{% endif %}
+			{% set ns.i = 0 %}
+			{% set ns.pagina = ns.pagina + 1 %}
+			
+			<img src="logo_sagra2022_nero.png" />&nbsp;<b>Sagra di Stra</b>&emsp;
+			<font size='2'>{{ordine.data.strftime("%a %d %b %Y")}}, {{ordine.ora.strftime("%H:%M")}} - {{ordine.cassa}}{% if ordine.tipo_pagamento != "CONTANTI" %}*{% endif %} - ID {{ordine.id}}</font>
+			<b style="position: absolute; right: 10px;">RICEVUTA</b>
+
+			<table width='100%' border='0' cellspacing='0'>
+				<colgroup>
+					<col width="15%">
+					<col width="40%">
+					<col width="10%">
+					<col width="35%">
+				</colgroup>
+				<tr>
+					<td colspan="1" align="center" rowspan="2" valign="top">
+						<font size='2'>Ordine</font><br /><font size='5'>{{ordine.progressivo}}</font>
+					</td>
+					<td colspan="1">
+						{% if ordine.esportazione %}
+							ASPORTO
+						{% else %}
+							{% if ordine.coperti %}
+								COPERTI: <b>{{ordine.coperti}}</b>
+							{% else %}
+								AGGIUNTA
+							{% endif %}
+						{% endif %}
+					</td>
+					<td colspan="2">
+						Cliente: <i><b>{{ordine.cliente}}</b></i>
+					</td>
+				</tr>
+				<tr>
+					{% if ns.pagina == 1 %}
+						<td colspan="2">
+							{% if not ordine.esportazione %}
+								Cameriere: ........................................
+							{% endif %}
+						</td>
+					{% else %}
+						<td colspan="1" bgcolor="#444444" align="center"><i><b><font color="white">→ Pagina {{ns.pagina}}</font></b></i></td>
+					{% endif %}
+				</tr>
+			</table>
+			
+			<table width='100%' border='0' cellpadding='2'>
+			{% if ns.pagina > 1 %}
+				<tr bgcolor="#CCCCCC">
+					<td colspan='3'></td>
+				</tr>
+			{% endif %}
+		{% endif %}
+		
 		{% if ns.tipologia != riga_ordine.desc_tipologia %}
 			<tr bgcolor="#CCCCCC">
 				<td colspan='3'></td>
@@ -58,10 +91,18 @@
 			{% set ns.tipologia = riga_ordine.desc_tipologia %}
 		{% endif %}
 		<tr>
-			<td align='center'>{{riga_ordine.quantita}}</td>
-			<td>{{riga_ordine.descrizione}}{% if riga_ordine.note %}&nbsp;→&nbsp;<i>{{riga_ordine.note}}</i>{% endif %}</td>
+			<td align='center' width="7%">{{riga_ordine.quantita}}</td>
+			<td>{{riga_ordine.descrizione}}</td>
 			<td align='right'>&euro;&nbsp;{{riga_ordine.prezzo_totale}}</td>
 		</tr>
+		{% if riga_ordine.note %}
+			<tr>
+				<td></td>
+				<td colspan="2">→&nbsp;<i>{{riga_ordine.note}}</i></td>
+			</tr>
+			{% set ns.i = ns.i + 1 %}
+		{% endif %}
+		{% set ns.i = ns.i + 1 %}
 	{% endfor %}
 	<tr bgcolor="#CCCCCC">
 		<td colspan='3'></td>
@@ -73,16 +114,16 @@
 	</tr>
 </table>
 
-<br /><br />
+<br />
 <table width="100%" cellpadding='0' cellspacing='0'>
 	<tr valign='bottom'>
 		<td valign='bottom'>
 			{% if ordine.note %}
-				<b>Note:</b> <i>{{ordine.note}}</i><br>
+				<b>Note per la cucina:</b> <i>{{ordine.note}}</i><br>
 			{% endif %}
 			<small>www.parrocchiadistra.it</small>
 		</td>
-		<td width='40%' align='right' valign='bottom'>
+		<td width='30%' align='right' valign='bottom'>
 			<font size='4'><i><b>Buon appetito!</b></i></font>
 		</td>
 	</tr>
